tests/negative/gold/incomplete_string_interpolation4_test.gold
tests/negative/incomplete_string_interpolation4_test.toit:5:15: error: Incomplete expression
  print "$foo[
              ^
tests/negative/incomplete_string_interpolation4_test.toit:5:14: error: Missing closing ']'
  print "$foo[
             ^
tests/negative/incomplete_string_interpolation4_test.toit:6:1: error: Unterminated string

^
Compilation failed.
